add AI, change camera to server webcam - AI code modified from somewhere online

--- a/server/.vscode/tasks.json
+++ b/server/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "server.py [run Flask server]",
             "type": "shell",
-            "command": ".venv\\scripts\\activate && flask --app server --debug run --port 8000",
+            "command": ".venv\\scripts\\activate && python server.py",
             "problemMatcher": []
         },
         {
